# ai-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  index.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: daily_plan.yaml  month_longform.yaml  week_tracker.yaml  weekly_build_log.yaml
.github/workflows/: ci.yml  daily_issue.yml  docs.yml  gitleaks.yml  monthly_longform_issue.yml  release.yml  secret-scan.yml  weekly_issue.yml
8-week-plan/: index.html
PLAN/: index.html
ROADMAP/: index.html
_mkdocs_nav_addition/: index.html
apps/rag_qa/: api.py
apps/recsys_api/: api.py
checklists/: index.html
checklists/rag_eval/: index.html
checklists/recsys_eval/: index.html
datasets/: README.md
docs/: 8-week-plan.md  PLAN.md  ROADMAP.md  _mkdocs_nav_addition.md  checklists.md  foundations.md  kpis.md  links.md
docs/checklists/: rag_eval.md  recsys_eval.md
docs/sprints/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md
foundations/: index.html
kpis/: index.html
links/: index.html
scripts/: bootstrap.bat  bootstrap.ps1  check_cuda.py  eval_recsys.py  rag_eval.py
search/: search_index.json
sprints/week-01/: index.html
sprints/week-02/: index.html
sprints/week-03/: index.html
templates/: customer_interview_notes.md  postmortem.md  weekly_build_log.md
tests/: test_metrics.py
(+6 files in other folders)
